<package>
  <name>node_tests</name>
  <version>0.0.0</version>
  <description>node_tests</description>
   <maintainer email='afourast@gmail.com'>Afouras Triantafyllos</maintainer> 

  <license>BSD</license>

  <author>Afouras Triantafyllos</author>

  <buildtool_depend>catkin</buildtool_depend>

   <build_depend>roscpp</build_depend> 
   <build_depend>rospy</build_depend> 
   <build_depend>data_fusion_communications</build_depend> 
   <build_depend>vision_communications</build_depend> 
   <build_depend>node_tests_msgs</build_depend> 
   <build_depend>std_msgs</build_depend> 
   <build_depend>tf</build_depend> 
   <build_depend>rostest</build_depend> 
   <build_depend>rosbag</build_depend> 
   
   <run_depend>roscpp</run_depend> 
   <run_depend>rospy</run_depend> 
   <run_depend>data_fusion_communications</run_depend> 
   <run_depend>vision_communications</run_depend> 
   <run_depend>node_tests_msgs</run_depend> 
   <run_depend>std_msgs</run_depend> 
   <run_depend>tf</run_depend> 
   <run_depend>rostest</run_depend> 
   <run_depend>rosbag</run_depend> 

  <export>

  </export>
</package>
